[tool.poetry]
name = "genie-radio"
version = "0.1.0"
description = ""
authors = ["nir.godin <nir.godin@planckresolution.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
genie-datastores = { git = "https://github.com/nirgodin/genie-datastores.git", rev = "836851a0", extras = ["postgres", "redis"]}
spotipyio = {git = "https://github.com/nirgodin/spotipyio.git", rev = "25585d2e"}
shazamio = ">=0.6.0,<0.7"
ffmpeg = ">=1.4,<1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
