[tool.poetry]
name = "genie-radio"
version = "0.1.0"
description = ""
authors = ["nir.godin <nir.godin@planckresolution.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
genie-datastores = { git = "https://github.com/nirgodin/genie-datastores.git", rev = "30a93b3a", extras = ["postgres", "redis"]}
spotipyio = {git = "https://github.com/nirgodin/spotipyio.git", rev = "f4b0dba2"}
shazamio = ">=0.6.0,<0.7"
ffmpeg = ">=1.4,<1.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.2,<9.0"
pytest-asyncio = ">=0.21.1,<0.22"
genie-datastores = { git = "https://github.com/nirgodin/genie-datastores.git", rev = "30a93b3a", extras = ["postgres-testing"]}

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = ["asyncio: mark a test as an asyncio coroutine"]
addopts = "--asyncio-mode=auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
